# advent-of-code

./: .clang-format  README.md
2022/: CMakeLists.txt
2022/day_01/: CMakeLists.txt  day_01.cpp
2023/: CMakeLists.txt
2023/day1/: CMakeLists.txt
2023/day2/: CMakeLists.txt  day2_part1.cpp  day2_part2.cpp
2023/day3/: CMakeLists.txt  day3_part1.cpp  day3_part2.cpp
2023/day_01/: day1_part1.cpp  day1_part2.cpp
2024/: CMakeLists.txt  README.md  run_tests.bash
2024/day1/: CMakeLists.txt  day1_part1.cpp  day1_part2.cpp
